--- a/predictions-final/Offense_Predictions_All.ipynb
+++ b/predictions-final/Offense_Predictions_All.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled84.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNP0gXQOoEf22miZa7lEVlU",
+      "authorship_tag": "ABX9TyOySooq5YvElyhZoDr+30RE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "DffZtLAbFvcW",
         "colab_type": "code",
-        "outputId": "ec9c6e65-4199-481d-804d-1d0ec803a269",
+        "outputId": "306c251c-8c3e-4bf8-b286-7469c5537aae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
@@ -83,12 +83,14 @@
       "source": [
         "# Import data\n",
         "players_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/players_full.csv')\n",
-        "original_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/actuals/actuals_offense.csv')\n",
+        "offense_pred_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/actuals/actuals_offense.csv')\n",
+        "kicker_pred_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/actuals/actuals_kickers.csv')\n",
         "kickers_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/rookies_non_kicker.csv')\n",
         "offense_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/rookies_non_offense.csv')\n",
         "bye_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/bye.csv')\n",
         "injury_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/injury.csv')\n",
-        "player_df = pd.concat([kickers_df, offense_df], ignore_index=True)"
+        "player_df = pd.concat([kickers_df, offense_df], ignore_index=True)\n",
+        "original_df = pd.concat([offense_pred_df, kicker_pred_df], ignore_index=True)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -98,7 +100,7 @@
       "metadata": {
         "id": "m78bxZQ_GNtQ",
         "colab_type": "code",
-        "outputId": "bb942d87-e6a6-4025-b551-377c5b5e311a",
+        "outputId": "d533199b-20e5-4c9f-ab00-7a60c7cc6bc3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 355
@@ -664,7 +666,7 @@
       "metadata": {
         "id": "JaUeCnKAGTXY",
         "colab_type": "code",
-        "outputId": "01c90b94-d848-4457-d1a6-4bc27d31f61a",
+        "outputId": "73219639-4113-4e15-f0f9-b8b88832011c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -777,7 +779,7 @@
       "metadata": {
         "id": "-tpuw1teGd-v",
         "colab_type": "code",
-        "outputId": "f7da1535-eac5-4f75-98a7-05ea17463e94",
+        "outputId": "4882be80-4ea4-4f5b-c0d7-ae9c6a3c1fb1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -890,7 +892,7 @@
       "metadata": {
         "id": "5rdO3zKnGhX3",
         "colab_type": "code",
-        "outputId": "0eee6e4f-6aa4-4dd6-ef45-8dde16dce064",
+        "outputId": "928f82fa-9c9b-40e9-8403-1fac23b77d78",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -1096,7 +1098,7 @@
         "                    week_aname\n",
         "                     ]\n",
         "\n",
-        "    player_list = offense_df['player'].tolist()\n",
+        "    player_list = player_df['player'].tolist()\n",
         "\n",
         "    # The column is the column of the dataframe (309 = 2019-game1)\n",
         "    end_col = 308 + w\n",
@@ -1203,7 +1205,7 @@
         "    week_pct = 'week' + str(week) + '-pct'\n",
         "\n",
         "    final_df[week_diff] = final_df[week_pred] - final_df[week_act]\n",
-        "    final_df[week_pct] = final_df[week_diff] / final_df[week_pred]\n",
+        "    final_df[week_pct] = final_df[week_diff].div(final_df[week_pred].where(final_df[week_pred]!=0, np.nan))\n",
         "    final_df[week_pred] = final_df[week_pred].astype(int)\n",
         "\n",
         "    file_name = '/content/week' + str(week) + '-pred-offense-norookies.csv'\n",
