--- a/neural-network/Offense_Predictions.ipynb
+++ b/neural-network/Offense_Predictions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled84.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO1W9b68IRjIcMsU9CUPbYh",
+      "authorship_tag": "ABX9TyMvvLQZvf20hneSm2DSud69",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
       "metadata": {
         "id": "DffZtLAbFvcW",
         "colab_type": "code",
-        "outputId": "ed9ab604-2041-471a-e750-7bfc265824c5",
+        "outputId": "6957353e-3eca-4919-8574-c625637a6dc3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -78,12 +78,14 @@
       "source": [
         "# Import data\n",
         "players_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/players_full.csv')\n",
-        "original_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/actuals/actuals_offense.csv')\n",
+        "offense_pred_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/actuals/actuals_offense.csv')\n",
+        "kicker_pred_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/actuals/actuals_kickers.csv')\n",
         "kickers_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/rookies_non_kicker.csv')\n",
         "offense_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/rookies_non_offense.csv')\n",
         "bye_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/bye.csv')\n",
         "injury_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/injury.csv')\n",
-        "player_df = pd.concat([kickers_df, offense_df], ignore_index=True)"
+        "player_df = pd.concat([kickers_df, offense_df], ignore_index=True)\n",
+        "original_df = pd.concat([offense_pred_df, kicker_pred_df], ignore_index=True)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -93,7 +95,7 @@
       "metadata": {
         "id": "m78bxZQ_GNtQ",
         "colab_type": "code",
-        "outputId": "9609c688-c8a0-48ce-e94d-06c5edd49b0c",
+        "outputId": "7ea7de4b-568a-4053-c709-0a2acea78e38",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 355
@@ -659,7 +661,7 @@
       "metadata": {
         "id": "JaUeCnKAGTXY",
         "colab_type": "code",
-        "outputId": "f2c6806d-8cf3-4336-af87-30c8b976eb6e",
+        "outputId": "33748cc4-8c83-4fbb-8bc6-1b4754724716",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -772,7 +774,7 @@
       "metadata": {
         "id": "-tpuw1teGd-v",
         "colab_type": "code",
-        "outputId": "3d0a9a54-7b67-4577-ae1f-e32a57c2de6d",
+        "outputId": "7db6b553-2254-4441-87ce-f7e89bde3233",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -885,7 +887,7 @@
       "metadata": {
         "id": "5rdO3zKnGhX3",
         "colab_type": "code",
-        "outputId": "16d7838a-7587-4d0e-b6f5-8775e0341f6e",
+        "outputId": "cdfc8989-242c-4a0e-95ed-2d9be04a523c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -1149,15 +1151,15 @@
         "colab": {}
       },
       "source": [
-        "# Create the time series for a team\n",
-        "def make_series(p):\n",
+        "# Create the time series for a player\n",
+        "def make_series(p, c):\n",
         "    column_names = ['game', 'points']\n",
         "    df = pd.DataFrame(columns = column_names)\n",
         "\n",
-        "    for i in range (1, 321):\n",
+        "    for i in range (c, 321):\n",
         "        game = i\n",
         "        col = i + 4\n",
-        "        points = defense_df.iloc[:, col].loc[(defense_df['player']==p)].iloc[0]\n",
+        "        points = original_df.iloc[:, col].loc[(original_df['player']==p)].iloc[0]\n",
         "        df = df.append({'game': game, 'points': points}, ignore_index=True)\n",
         "\n",
         "    s = pd.Series(df['points'].values, index=df['game'])\n",
@@ -1174,8 +1176,8 @@
         "colab": {}
       },
       "source": [
-        "def lstm_pred(p, np):\n",
-        "    series = make_series(p)\n",
+        "def lstm_pred(p, np, c):\n",
+        "    series = make_series(p, c)\n",
         "    X = series.values\n",
         "    supervised = timeseries_to_supervised(X, 1)\n",
         "    supervised_values = supervised.values\n",
@@ -1272,15 +1274,14 @@
         "    week_df = pd.DataFrame(columns = column_names)\n",
         "\n",
         "    for player in player_list:\n",
+        "        print(player)\n",
         "\n",
         "        first = player_df['first'].loc[(player_df['player']==player)].iloc[0]\n",
         "        last = player_df['last'].loc[(player_df['player']==player)].iloc[0]\n",
         "        name = player_df['name'].loc[(player_df['player']==player)].iloc[0]\n",
         "        position1 = player_df['position1'].loc[(player_df['player']==player)].iloc[0]\n",
         "        start_year = player_df['start'].loc[(player_df['player']==player)].iloc[0]\n",
-        "        print(player)\n",
         "        row = original_df.index[(original_df['player']==player)][0]\n",
-        "        print(player)\n",
         "        team = players_df['cteam'].loc[(players_df['player']==player)].iloc[0]\n",
         "\n",
         "        # Calculate the injury week\n",
@@ -1317,7 +1318,6 @@
         "        act_points = actuals.sum()\n",
         "\n",
         "        # Run the model excluding players without enough data\n",
-        "        print(player)\n",
         "        if (start_year < 2016) & (train_data.sum() > 50):\n",
         "        \n",
         "            if w > bye_week:\n",
@@ -1329,7 +1329,7 @@
         "                pred_points = 0\n",
         "            else:\n",
         "                # Calculate predicted points\n",
-        "                pred_points = lstm_pred(player, n_periods)\n",
+        "                pred_points = lstm_pred(player, n_periods, col)\n",
         "        else:\n",
         "            pred_points = train_data.mean() * (18 - w)\n",
         "\n",
@@ -1345,15 +1345,15 @@
       "metadata": {
         "id": "qMBR3rxvJiw_",
         "colab_type": "code",
+        "outputId": "0cc0d17c-95f2-4daa-e503-efb594e497ef",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 392
-        },
-        "outputId": "66cf8aaa-90ee-44eb-97a0-3a4c808a52b0"
+          "height": 1000
+        }
       },
       "source": [
         "# Run for seasons 1 through 17\n",
-        "for i in range(1, 2):\n",
+        "for i in range(11, 18):\n",
         "    week = i\n",
         "    final_df = main(week)\n",
         "\n",
@@ -1363,33 +1363,285 @@
         "    week_pct = 'week' + str(week) + '-pct'\n",
         "\n",
         "    final_df[week_diff] = final_df[week_pred] - final_df[week_act]\n",
-        "    final_df[week_pct] = final_df[week_diff] / final_df[week_pred]\n",
+        "    final_df[week_pct] = final_df[week_diff].div(final_df[week_pred].where(final_df[week_pred]!=0, np.nan))\n",
         "    final_df[week_pred] = final_df[week_pred].astype(int)\n",
         "\n",
         "    file_name = '/content/week' + str(week) + '-pred-offense-norookies-k.csv'\n",
         "    final_df.to_csv(file_name, index=False)"
       ],
-      "execution_count": 30,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "AV-0400\n"
+            "AV-0400\n",
+            "MB-4600\n",
+            "RG-1500\n",
+            "MN-0800\n",
+            "SG-0800\n",
+            "MP-2100\n",
+            "MC-3000\n",
+            "NF-0300\n",
+            "SH-0400\n",
+            "RS-3400\n",
+            "DB-0200\n",
+            "KF-0250\n",
+            "RB-4650\n",
+            "JT-3950\n",
+            "GZ-2000\n",
+            "DH-3970\n",
+            "BM-0062\n",
+            "BM-1650\n",
+            "CB-2275\n",
+            "CP-0575\n",
+            "CS-0250\n",
+            "JL-0207\n",
+            "TL-1062\n",
+            "JM-7000\n",
+            "KF-0075\n",
+            "SF-0050\n",
+            "WL-0300\n",
+            "AR-1450\n",
+            "HB-0500\n",
+            "JE-0250\n",
+            "ZG-0050\n",
+            "YK-0100\n",
+            "MB-0020\n",
+            "DC-0450\n",
+            "GJ-1200\n",
+            "EP-0512\n",
+            "JS-0350\n",
+            "KV-0250\n",
+            "AV-0400\n",
+            "MB-4600\n",
+            "RG-1500\n",
+            "MN-0800\n",
+            "SG-0800\n",
+            "MP-2100\n",
+            "MC-3000\n",
+            "NF-0300\n",
+            "SH-0400\n",
+            "RS-3400\n",
+            "DB-0200\n",
+            "KF-0250\n",
+            "RB-4650\n",
+            "JT-3950\n",
+            "GZ-2000\n",
+            "DH-3970\n",
+            "BM-0062\n",
+            "BM-1650\n",
+            "CB-2275\n",
+            "CP-0575\n",
+            "CS-0250\n",
+            "JL-0207\n",
+            "TL-1062\n",
+            "JM-7000\n",
+            "KF-0075\n",
+            "SF-0050\n",
+            "WL-0300\n",
+            "AR-1450\n",
+            "HB-0500\n",
+            "JE-0250\n",
+            "ZG-0050\n",
+            "YK-0100\n",
+            "MB-0020\n",
+            "DC-0450\n",
+            "GJ-1200\n",
+            "EP-0512\n",
+            "JS-0350\n",
+            "KV-0250\n",
+            "AV-0400\n",
+            "MB-4600\n",
+            "RG-1500\n",
+            "MN-0800\n",
+            "SG-0800\n",
+            "MP-2100\n",
+            "MC-3000\n",
+            "NF-0300\n",
+            "SH-0400\n",
+            "RS-3400\n",
+            "DB-0200\n",
+            "KF-0250\n",
+            "RB-4650\n",
+            "JT-3950\n",
+            "GZ-2000\n",
+            "DH-3970\n",
+            "BM-0062\n",
+            "BM-1650\n",
+            "CB-2275\n",
+            "CP-0575\n",
+            "CS-0250\n",
+            "JL-0207\n",
+            "TL-1062\n",
+            "JM-7000\n",
+            "KF-0075\n",
+            "SF-0050\n",
+            "WL-0300\n",
+            "AR-1450\n",
+            "HB-0500\n",
+            "JE-0250\n",
+            "ZG-0050\n",
+            "YK-0100\n",
+            "MB-0020\n",
+            "DC-0450\n",
+            "GJ-1200\n",
+            "EP-0512\n",
+            "JS-0350\n",
+            "KV-0250\n",
+            "AV-0400\n",
+            "MB-4600\n",
+            "RG-1500\n",
+            "MN-0800\n",
+            "SG-0800\n",
+            "MP-2100\n",
+            "MC-3000\n",
+            "NF-0300\n",
+            "SH-0400\n",
+            "RS-3400\n",
+            "DB-0200\n",
+            "KF-0250\n",
+            "RB-4650\n",
+            "JT-3950\n",
+            "GZ-2000\n",
+            "DH-3970\n",
+            "BM-0062\n",
+            "BM-1650\n",
+            "CB-2275\n",
+            "CP-0575\n",
+            "CS-0250\n",
+            "JL-0207\n",
+            "TL-1062\n",
+            "JM-7000\n",
+            "KF-0075\n",
+            "SF-0050\n",
+            "WL-0300\n",
+            "AR-1450\n",
+            "HB-0500\n",
+            "JE-0250\n",
+            "ZG-0050\n",
+            "YK-0100\n",
+            "MB-0020\n",
+            "DC-0450\n",
+            "GJ-1200\n",
+            "EP-0512\n",
+            "JS-0350\n",
+            "KV-0250\n",
+            "AV-0400\n",
+            "MB-4600\n",
+            "RG-1500\n",
+            "MN-0800\n",
+            "SG-0800\n",
+            "MP-2100\n",
+            "MC-3000\n",
+            "NF-0300\n",
+            "SH-0400\n",
+            "RS-3400\n",
+            "DB-0200\n",
+            "KF-0250\n",
+            "RB-4650\n",
+            "JT-3950\n",
+            "GZ-2000\n",
+            "DH-3970\n",
+            "BM-0062\n",
+            "BM-1650\n",
+            "CB-2275\n",
+            "CP-0575\n",
+            "CS-0250\n",
+            "JL-0207\n",
+            "TL-1062\n",
+            "JM-7000\n",
+            "KF-0075\n",
+            "SF-0050\n",
+            "WL-0300\n",
+            "AR-1450\n",
+            "HB-0500\n",
+            "JE-0250\n",
+            "ZG-0050\n",
+            "YK-0100\n",
+            "MB-0020\n",
+            "DC-0450\n",
+            "GJ-1200\n",
+            "EP-0512\n",
+            "JS-0350\n",
+            "KV-0250\n",
+            "AV-0400\n",
+            "MB-4600\n",
+            "RG-1500\n",
+            "MN-0800\n",
+            "SG-0800\n",
+            "MP-2100\n",
+            "MC-3000\n",
+            "NF-0300\n",
+            "SH-0400\n",
+            "RS-3400\n",
+            "DB-0200\n",
+            "KF-0250\n",
+            "RB-4650\n",
+            "JT-3950\n",
+            "GZ-2000\n",
+            "DH-3970\n",
+            "BM-0062\n",
+            "BM-1650\n",
+            "CB-2275\n",
+            "CP-0575\n",
+            "CS-0250\n",
+            "JL-0207\n",
+            "TL-1062\n",
+            "JM-7000\n",
+            "KF-0075\n",
+            "SF-0050\n",
+            "WL-0300\n",
+            "AR-1450\n",
+            "HB-0500\n",
+            "JE-0250\n",
+            "ZG-0050\n",
+            "YK-0100\n",
+            "MB-0020\n",
+            "DC-0450\n",
+            "GJ-1200\n",
+            "EP-0512\n",
+            "JS-0350\n",
+            "KV-0250\n",
+            "AV-0400\n",
+            "MB-4600\n",
+            "RG-1500\n",
+            "MN-0800\n",
+            "SG-0800\n",
+            "MP-2100\n",
+            "MC-3000\n",
+            "NF-0300\n",
+            "SH-0400\n",
+            "RS-3400\n",
+            "DB-0200\n",
+            "KF-0250\n",
+            "RB-4650\n",
+            "JT-3950\n",
+            "GZ-2000\n",
+            "DH-3970\n",
+            "BM-0062\n",
+            "BM-1650\n",
+            "CB-2275\n",
+            "CP-0575\n",
+            "CS-0250\n",
+            "JL-0207\n",
+            "TL-1062\n",
+            "JM-7000\n",
+            "KF-0075\n",
+            "SF-0050\n",
+            "WL-0300\n",
+            "AR-1450\n",
+            "HB-0500\n",
+            "JE-0250\n",
+            "ZG-0050\n",
+            "YK-0100\n",
+            "MB-0020\n",
+            "DC-0450\n",
+            "GJ-1200\n",
+            "EP-0512\n",
+            "JS-0350\n",
+            "KV-0250\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "IndexError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-30-6c2e4e75e36a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mweek\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mfinal_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweek\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mweek_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'week'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweek\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'-pred'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-29-96995f01adea>\u001b[0m in \u001b[0;36mmain\u001b[0;34m(w)\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0mstart_year\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplayer_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'start'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplayer_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'player'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mplayer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplayer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m         \u001b[0mrow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moriginal_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moriginal_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'player'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mplayer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplayer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m         \u001b[0mteam\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplayers_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'cteam'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplayers_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'player'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mplayer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3927\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mis_scalar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3928\u001b[0m             \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcast_scalar_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3929\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mgetitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3930\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3931\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mslice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mIndexError\u001b[0m: index 0 is out of bounds for axis 0 with size 0"
-          ]
         }
       ]
     }
