--- a/aws/Input.ipynb
+++ b/aws/Input.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled90.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM/WG2pMCcxMeesOdvsb3wr",
+      "authorship_tag": "ABX9TyOjo8RemGd8aSPPfOuhgWmS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,11 +58,11 @@
       "metadata": {
         "id": "HI73XvV8iFy8",
         "colab_type": "code",
+        "outputId": "a81f5441-7a03-4661-87dc-e0dd24adb958",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 372
-        },
-        "outputId": "a86bfcfc-aeb2-4934-8b6a-55111d57dcb3"
+        }
       },
       "source": [
         "# The actuals for defensive teams\n",
@@ -646,6 +646,37 @@
         "        outfile.write('\\n')\n",
         "\n",
         "        row = row + 1\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CIbJ-0wHPDx4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "with open('/content/defense_test.json', 'w') as outfile:\n",
+        "    \n",
+        "    row = 0\n",
+        "    player_list = defense_df['player'].tolist()\n",
+        "\n",
+        "    for player in player_list:\n",
+        "        time_stamp = pd.Timestamp(2019, 1, 1, 0)\n",
+        "        data_series = defense_df.iloc[row, 5:325]\n",
+        "        data_array = data_series.tolist()\n",
+        "        dictionary = {\n",
+        "            'start': str(time_stamp),\n",
+        "            'target': str(data_array)\n",
+        "        }\n",
+        "        json_object = json.dumps(dictionary)\n",
+        "\n",
+        "        outfile.write(json_object) \n",
+        "        outfile.write('\\n')\n",
+        "\n",
+        "        row = row + 1"
       ],
       "execution_count": 0,
       "outputs": []
