--- a/aws/Input.ipynb
+++ b/aws/Input.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled90.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOjo8RemGd8aSPPfOuhgWmS",
+      "authorship_tag": "ABX9TyOTLxyJzemns5ubSNEkV5EW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "HI73XvV8iFy8",
         "colab_type": "code",
-        "outputId": "a81f5441-7a03-4661-87dc-e0dd24adb958",
+        "outputId": "2d136ba9-0236-495c-e96b-19ee3ddf6c01",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 372
@@ -635,17 +635,17 @@
         "    for player in player_list:\n",
         "        time_stamp = pd.Timestamp(2019, 1, 1, 0)\n",
         "        data_series = defense_df.iloc[row, 5:309]\n",
+        "        data_series = data_series.astype(float)\n",
         "        data_array = data_series.tolist()\n",
         "        dictionary = {\n",
         "            'start': str(time_stamp),\n",
-        "            'target': str(data_array)\n",
+        "            'target': data_array\n",
         "        }\n",
-        "        json_object = json.dumps(dictionary)\n",
+        "        json_object = json.dump(dictionary, outfile)\n",
         "\n",
-        "        outfile.write(json_object) \n",
         "        outfile.write('\\n')\n",
         "\n",
-        "        row = row + 1\n"
+        "        row = row + 1"
       ],
       "execution_count": 0,
       "outputs": []
@@ -666,14 +666,14 @@
         "    for player in player_list:\n",
         "        time_stamp = pd.Timestamp(2019, 1, 1, 0)\n",
         "        data_series = defense_df.iloc[row, 5:325]\n",
+        "        data_series = data_series.astype(float)\n",
         "        data_array = data_series.tolist()\n",
         "        dictionary = {\n",
         "            'start': str(time_stamp),\n",
-        "            'target': str(data_array)\n",
+        "            'target': data_array\n",
         "        }\n",
-        "        json_object = json.dumps(dictionary)\n",
+        "        json_object = json.dump(dictionary, outfile)\n",
         "\n",
-        "        outfile.write(json_object) \n",
         "        outfile.write('\\n')\n",
         "\n",
         "        row = row + 1"
