--- a/aws/Input.ipynb
+++ b/aws/Input.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled90.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOTLxyJzemns5ubSNEkV5EW",
+      "authorship_tag": "ABX9TyNeJzp8TDZsKcelrfnfm94S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "HI73XvV8iFy8",
         "colab_type": "code",
-        "outputId": "2d136ba9-0236-495c-e96b-19ee3ddf6c01",
+        "outputId": "7f13ae16-89a9-4cf6-fc2f-81442db02cd1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 372
@@ -68,7 +68,7 @@
         "# The actuals for defensive teams\n",
         "defense_df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -615,7 +615,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 8
         }
       ]
     },
@@ -636,6 +636,7 @@
         "        time_stamp = pd.Timestamp(2019, 1, 1, 0)\n",
         "        data_series = defense_df.iloc[row, 5:309]\n",
         "        data_series = data_series.astype(float)\n",
+        "        data_series = data_series.fillna(\"NaN\")\n",
         "        data_array = data_series.tolist()\n",
         "        dictionary = {\n",
         "            'start': str(time_stamp),\n",
@@ -667,6 +668,7 @@
         "        time_stamp = pd.Timestamp(2019, 1, 1, 0)\n",
         "        data_series = defense_df.iloc[row, 5:325]\n",
         "        data_series = data_series.astype(float)\n",
+        "        data_series = data_series.fillna(\"NaN\")\n",
         "        data_array = data_series.tolist()\n",
         "        dictionary = {\n",
         "            'start': str(time_stamp),\n",
