--- a/metrics/MetricsARIMA.ipynb
+++ b/metrics/MetricsARIMA.ipynb
@@ -38,7 +38,7 @@
       },
       "source": [
         "# Load the raw data\n",
-        "w1_results_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-predictions-prod3/predictions-week1.csv')"
+        "w1_results_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-predictions-prod2/predictions-week1.csv')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "RgOXqOBKx4MC",
         "colab_type": "code",
-        "outputId": "07703545-574f-45fa-c208-97fcc3027bca",
+        "outputId": "b150966d-f604-41c6-95a1-c41dfa05cc52",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -67,7 +67,7 @@
         "\n",
         "w1_results_df.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -109,6 +109,22 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
+              "      <td>TG-1950</td>\n",
+              "      <td>Todd</td>\n",
+              "      <td>Gurley</td>\n",
+              "      <td>Todd Gurley</td>\n",
+              "      <td>RB</td>\n",
+              "      <td>313.10</td>\n",
+              "      <td>344</td>\n",
+              "      <td>188.40</td>\n",
+              "      <td>156.079531</td>\n",
+              "      <td>0.453088</td>\n",
+              "      <td>7.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>43.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
               "      <td>SB-0212</td>\n",
               "      <td>Saquon</td>\n",
               "      <td>Barkley</td>\n",
@@ -120,27 +136,27 @@
               "      <td>127.750000</td>\n",
               "      <td>0.394473</td>\n",
               "      <td>9.0</td>\n",
-              "      <td>1.0</td>\n",
+              "      <td>2.0</td>\n",
               "      <td>36.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>1</th>\n",
+              "      <th>2</th>\n",
               "      <td>RW-3850</td>\n",
               "      <td>Russell</td>\n",
               "      <td>Wilson</td>\n",
               "      <td>Russell Wilson</td>\n",
               "      <td>QB</td>\n",
               "      <td>301.42</td>\n",
-              "      <td>310</td>\n",
+              "      <td>306</td>\n",
               "      <td>333.64</td>\n",
-              "      <td>-22.906921</td>\n",
-              "      <td>-0.073719</td>\n",
+              "      <td>-26.917143</td>\n",
+              "      <td>-0.087757</td>\n",
               "      <td>10.0</td>\n",
-              "      <td>2.0</td>\n",
+              "      <td>3.0</td>\n",
               "      <td>4.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>2</th>\n",
+              "      <th>3</th>\n",
               "      <td>DP-2037</td>\n",
               "      <td>Dak</td>\n",
               "      <td>Prescott</td>\n",
@@ -152,40 +168,24 @@
               "      <td>-45.667500</td>\n",
               "      <td>-0.152697</td>\n",
               "      <td>12.0</td>\n",
-              "      <td>3.0</td>\n",
+              "      <td>4.0</td>\n",
               "      <td>3.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3</th>\n",
+              "      <th>4</th>\n",
               "      <td>AR-1300</td>\n",
               "      <td>Aaron</td>\n",
               "      <td>Rodgers</td>\n",
               "      <td>Aaron Rodgers</td>\n",
               "      <td>QB</td>\n",
               "      <td>317.58</td>\n",
-              "      <td>297</td>\n",
+              "      <td>295</td>\n",
               "      <td>282.38</td>\n",
-              "      <td>15.275935</td>\n",
-              "      <td>0.051321</td>\n",
+              "      <td>13.352208</td>\n",
+              "      <td>0.045150</td>\n",
               "      <td>5.0</td>\n",
-              "      <td>4.0</td>\n",
+              "      <td>5.0</td>\n",
               "      <td>11.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>CN-0500</td>\n",
-              "      <td>Cam</td>\n",
-              "      <td>Newton</td>\n",
-              "      <td>Cam Newton</td>\n",
-              "      <td>QB</td>\n",
-              "      <td>283.60</td>\n",
-              "      <td>291</td>\n",
-              "      <td>16.68</td>\n",
-              "      <td>275.042487</td>\n",
-              "      <td>0.942822</td>\n",
-              "      <td>14.0</td>\n",
-              "      <td>5.0</td>\n",
-              "      <td>424.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -193,11 +193,11 @@
             ],
             "text/plain": [
               "    player    first      last  ... rank-cur rank-pred  rank-act\n",
-              "0  SB-0212   Saquon   Barkley  ...      9.0       1.0      36.0\n",
-              "1  RW-3850  Russell    Wilson  ...     10.0       2.0       4.0\n",
-              "2  DP-2037      Dak  Prescott  ...     12.0       3.0       3.0\n",
-              "3  AR-1300    Aaron   Rodgers  ...      5.0       4.0      11.0\n",
-              "4  CN-0500      Cam    Newton  ...     14.0       5.0     424.0\n",
+              "0  TG-1950     Todd    Gurley  ...      7.0       1.0      43.0\n",
+              "1  SB-0212   Saquon   Barkley  ...      9.0       2.0      36.0\n",
+              "2  RW-3850  Russell    Wilson  ...     10.0       3.0       4.0\n",
+              "3  DP-2037      Dak  Prescott  ...     12.0       4.0       3.0\n",
+              "4  AR-1300    Aaron   Rodgers  ...      5.0       5.0      11.0\n",
               "\n",
               "[5 rows x 13 columns]"
             ]
@@ -214,7 +214,7 @@
       "metadata": {
         "id": "BHPmWvto0XSY",
         "colab_type": "code",
-        "outputId": "516042d5-6f27-4eb0-fdfd-e95436fc81aa",
+        "outputId": "4cf8843b-747c-4673-9a84-55372902ae5c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 884
@@ -225,7 +225,7 @@
         "# Calculate the MAE for current points using the average of previous weeks\n",
         "for i in range(1, 18):\n",
         "\n",
-        "    filename = 'https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-predictions-prod3/predictions-week' + str(i) + '.csv'\n",
+        "    filename = 'https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-predictions-prod2/predictions-week' + str(i) + '.csv'\n",
         "    \n",
         "    # Column names\n",
         "    week_cur = 'week' + str(i) + '-cur'\n",
@@ -256,60 +256,60 @@
         "    week_ca_mae = mean_absolute_error(week_act, week_current)\n",
         "    print('MAE current vs actual week {0:2d} {1:3.2f}'.format(i, week_ca_mae), '\\n')\n"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "MAE predicted vs actual week  1 28.69\n",
+            "MAE predicted vs actual week  1 34.25\n",
             "MAE current vs actual week  1 36.57 \n",
             "\n",
-            "MAE predicted vs actual week  2 27.83\n",
+            "MAE predicted vs actual week  2 32.75\n",
             "MAE current vs actual week  2 51.02 \n",
             "\n",
-            "MAE predicted vs actual week  3 24.86\n",
+            "MAE predicted vs actual week  3 29.51\n",
             "MAE current vs actual week  3 38.27 \n",
             "\n",
-            "MAE predicted vs actual week  4 22.99\n",
+            "MAE predicted vs actual week  4 27.66\n",
             "MAE current vs actual week  4 33.01 \n",
             "\n",
-            "MAE predicted vs actual week  5 21.49\n",
+            "MAE predicted vs actual week  5 25.49\n",
             "MAE current vs actual week  5 29.42 \n",
             "\n",
-            "MAE predicted vs actual week  6 20.25\n",
+            "MAE predicted vs actual week  6 23.17\n",
             "MAE current vs actual week  6 27.21 \n",
             "\n",
-            "MAE predicted vs actual week  7 19.39\n",
+            "MAE predicted vs actual week  7 22.01\n",
             "MAE current vs actual week  7 24.31 \n",
             "\n",
-            "MAE predicted vs actual week  8 18.00\n",
+            "MAE predicted vs actual week  8 20.56\n",
             "MAE current vs actual week  8 21.69 \n",
             "\n",
-            "MAE predicted vs actual week  9 16.28\n",
+            "MAE predicted vs actual week  9 18.12\n",
             "MAE current vs actual week  9 19.55 \n",
             "\n",
-            "MAE predicted vs actual week 10 15.04\n",
+            "MAE predicted vs actual week 10 16.26\n",
             "MAE current vs actual week 10 17.19 \n",
             "\n",
-            "MAE predicted vs actual week 11 13.30\n",
+            "MAE predicted vs actual week 11 14.23\n",
             "MAE current vs actual week 11 14.80 \n",
             "\n",
-            "MAE predicted vs actual week 12 11.76\n",
+            "MAE predicted vs actual week 12 12.50\n",
             "MAE current vs actual week 12 12.71 \n",
             "\n",
-            "MAE predicted vs actual week 13 10.44\n",
+            "MAE predicted vs actual week 13 11.00\n",
             "MAE current vs actual week 13 10.93 \n",
             "\n",
-            "MAE predicted vs actual week 14 8.57\n",
+            "MAE predicted vs actual week 14 8.95\n",
             "MAE current vs actual week 14 8.92 \n",
             "\n",
-            "MAE predicted vs actual week 15 6.75\n",
+            "MAE predicted vs actual week 15 6.98\n",
             "MAE current vs actual week 15 7.11 \n",
             "\n",
-            "MAE predicted vs actual week 16 5.06\n",
+            "MAE predicted vs actual week 16 5.12\n",
             "MAE current vs actual week 16 5.35 \n",
             "\n",
-            "MAE predicted vs actual week 17 2.94\n",
+            "MAE predicted vs actual week 17 2.97\n",
             "MAE current vs actual week 17 3.21 \n",
             "\n"
           ],
