--- a/metrics/MetricsARIMA.ipynb
+++ b/metrics/MetricsARIMA.ipynb
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "RgOXqOBKx4MC",
         "colab_type": "code",
-        "outputId": "b150966d-f604-41c6-95a1-c41dfa05cc52",
+        "outputId": "67cec759-ddbc-41f4-ef91-e14986f698ba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -67,7 +67,7 @@
         "\n",
         "w1_results_df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,7 +205,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 5
         }
       ]
     },
@@ -214,7 +214,7 @@
       "metadata": {
         "id": "BHPmWvto0XSY",
         "colab_type": "code",
-        "outputId": "4cf8843b-747c-4673-9a84-55372902ae5c",
+        "outputId": "b131a40f-3955-4f3a-b0c5-d8380f3246bc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 884
@@ -223,6 +223,9 @@
       "source": [
         "# Calculate the MAE for predicted points vs. actual points\n",
         "# Calculate the MAE for current points using the average of previous weeks\n",
+        "column_names = ['week', 'arima', 'average']\n",
+        "metric_df = pd.DataFrame(columns = column_names)\n",
+        "\n",
         "for i in range(1, 18):\n",
         "\n",
         "    filename = 'https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-predictions-prod2/predictions-week' + str(i) + '.csv'\n",
@@ -254,9 +257,14 @@
         "\n",
         "    # Calculate the MAE for current vs. actual\n",
         "    week_ca_mae = mean_absolute_error(week_act, week_current)\n",
-        "    print('MAE current vs actual week {0:2d} {1:3.2f}'.format(i, week_ca_mae), '\\n')\n"
+        "    print('MAE current vs actual week {0:2d} {1:3.2f}'.format(i, week_ca_mae), '\\n')\n",
+        "\n",
+        "    metric_df = metric_df.append({'week': i, 'arima': week_pa_mae, 'average': week_ca_mae}, ignore_index=True)\n",
+        "\n",
+        "file_name = '/content/arima_metrics.csv'\n",
+        "metric_df.to_csv(file_name, index=False)"
       ],
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
